--- a/ETL_Mini_Project_SWang_Code.ipynb
+++ b/ETL_Mini_Project_SWang_Code.ipynb
@@ -234,7 +234,17 @@
     }
    ],
    "source": [
-    "# Get a brief summary of the crowdfunding_info DataFrame.\n"
+    "# Get a brief summary of the crowdfunding_info DataFrame.\n",
+    "crowdfunding_info_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create the Category\n"
    ]
   },
   {
@@ -1707,9 +1717,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3707,7 +3715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
