--- a/ETL_Mini_Project_SWang_Code.ipynb
+++ b/ETL_Mini_Project_SWang_Code.ipynb
@@ -239,15 +239,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Create the Category\n"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -287,7 +278,8 @@
     }
    ],
    "source": [
-    "# Get the crowdfunding_info_df columns.\n"
+    "# Get the crowdfunding_info_df columns.\n",
+    "crowdfunding_info_df.columns"
    ]
   },
   {
@@ -332,7 +324,7 @@
        "      <th>spotlight</th>\n",
        "      <th>category &amp; sub-category</th>\n",
        "      <th>category</th>\n",
-       "      <th>subcategory</th>\n",
+       "      <th>sub-category</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -462,7 +454,7 @@
        "3             24      US      USD   1634792400  1642399200       False   \n",
        "4             53      US      USD   1608530400  1629694800       False   \n",
        "\n",
-       "   spotlight category & sub-category    category  subcategory  \n",
+       "   spotlight category & sub-category    category sub-category  \n",
        "0      False        food/food trucks        food  food trucks  \n",
        "1       True              music/rock       music         rock  \n",
        "2      False          technology/web  technology          web  \n",
@@ -476,7 +468,10 @@
     }
    ],
    "source": [
-    "# Assign the category and subcategory values to category and subcategory columns.\n"
+    "# Assign the category and subcategory values to category and subcategory columns.\n",
+    "\n",
+    "crowdfunding_info_df[['category','sub-category']]=crowdfunding_info_df['category & sub-category'].str.split('/',n=2,expand=True)\n",
+    "crowdfunding_info_df.head()"
    ]
   },
   {
@@ -501,6 +496,8 @@
    "source": [
     "# Get the unique categories and subcategories in separate lists.\n",
     "\n",
+    "categories = crowdfunding_info_df['category'].unique()\n",
+    "subcategories = crowdfunding_info_df['sub-category'].unique()\n",
     "\n",
     "print(categories)\n",
     "print(subcategories)"
@@ -565,9 +562,10 @@
    ],
    "source": [
     "# Use a list comprehension to add \"cat\" to each category_id. \n",
-    "\n",
+    "cat_ids = [f\"cat{i+1}\" for i in range(len(categories))]\n",
+    "                      \n",
     "# Use a list comprehension to add \"subcat\" to each subcategory_id.    \n",
-    "\n",
+    "scat_ids = [f\"subcat{i+1}\" for i in range(len(subcategories))]\n",
     "    \n",
     "print(cat_ids)\n",
     "print(scat_ids)"
@@ -577,11 +575,62 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  category_id      category\n",
+      "0        cat1          food\n",
+      "1        cat2         music\n",
+      "2        cat3    technology\n",
+      "3        cat4       theater\n",
+      "4        cat5  film & video\n",
+      "5        cat6    publishing\n",
+      "6        cat7         games\n",
+      "7        cat8   photography\n",
+      "8        cat9    journalism\n",
+      "   subcategory_id        subcategory\n",
+      "0         subcat1        food trucks\n",
+      "1         subcat2               rock\n",
+      "2         subcat3                web\n",
+      "3         subcat4              plays\n",
+      "4         subcat5        documentary\n",
+      "5         subcat6     electric music\n",
+      "6         subcat7              drama\n",
+      "7         subcat8         indie rock\n",
+      "8         subcat9          wearables\n",
+      "9        subcat10         nonfiction\n",
+      "10       subcat11          animation\n",
+      "11       subcat12        video games\n",
+      "12       subcat13             shorts\n",
+      "13       subcat14            fiction\n",
+      "14       subcat15  photography books\n",
+      "15       subcat16   radio & podcasts\n",
+      "16       subcat17              metal\n",
+      "17       subcat18               jazz\n",
+      "18       subcat19       translations\n",
+      "19       subcat20         television\n",
+      "20       subcat21       mobile games\n",
+      "21       subcat22        world music\n",
+      "22       subcat23    science fiction\n",
+      "23       subcat24              audio\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
-    "\n",
-    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n"
+    "category_df = pd.DataFrame({\n",
+    "    'category_id': cat_ids,\n",
+    "    'category': categories\n",
+    "})\n",
+    "print(category_df)\n",
+    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n",
+    "subcategory_df = pd.DataFrame({\n",
+    "    'subcategory_id': scat_ids,\n",
+    "    'subcategory': subcategories\n",
+    "})\n",
+    "print(subcategory_df)"
    ]
   },
   {
